--- a/IfCastle/IfCastle.Client/IfCastle.Client.csproj
+++ b/IfCastle/IfCastle.Client/IfCastle.Client.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="WebSocket4Net" Version="0.15.2" />
   </ItemGroup>
 </Project>
